trunk/cl.tar/cl/y.output
   0  $accept : translation_unit $end

   1  primary_expression : IDENTIFIER
   2                     | CONSTANT
   3                     | STRING_LITERAL
   4                     | '(' expression ')'

   5  postfix_expression : primary_expression

   6  $$1 :

   7  $$2 :

   8  $$3 :

   9  postfix_expression : postfix_expression $$1 '[' $$2 expression $$3 ']'
  10                     | postfix_expression '(' ')'
  11                     | postfix_expression '(' argument_expression_list ')'
  12                     | postfix_expression '.' IDENTIFIER
  13                     | postfix_expression PTR_OP IDENTIFIER
  14                     | postfix_expression INC_OP
  15                     | postfix_expression DEC_OP

  16  argument_expression_list : assignment_expression
  17                           | argument_expression_list ',' assignment_expression

  18  unary_expression : postfix_expression
  19                   | INC_OP unary_expression
  20                   | DEC_OP unary_expression
  21                   | unary_operator cast_expression
  22                   | SIZEOF unary_expression
  23                   | SIZEOF '(' type_name ')'

  24  unary_operator : '&'
  25                 | '*'
  26                 | '+'
  27                 | '-'
  28                 | '~'
  29                 | '!'

  30  cast_expression : unary_expression
  31                  | '(' type_name ')' cast_expression

  32  multiplicative_expression : cast_expression
  33                            | multiplicative_expression '*' cast_expression
  34                            | multiplicative_expression '/' cast_expression
  35                            | multiplicative_expression '%' cast_expression

  36  additive_expression : multiplicative_expression
  37                      | additive_expression '+' multiplicative_expression
  38                      | additive_expression '-' multiplicative_expression

  39  shift_expression : additive_expression
  40                   | shift_expression LEFT_OP additive_expression
  41                   | shift_expression RIGHT_OP additive_expression

  42  relational_expression : shift_expression

  43  $$4 :

  44  relational_expression : relational_expression $$4 '<' shift_expression

  45  $$5 :

  46  relational_expression : relational_expression $$5 '>' shift_expression
  47                        | relational_expression LE_OP shift_expression
  48                        | relational_expression GE_OP shift_expression

  49  equality_expression : relational_expression
  50                      | equality_expression EQ_OP relational_expression
  51                      | equality_expression NE_OP relational_expression

  52  and_expression : equality_expression
  53                 | and_expression '&' equality_expression

  54  exclusive_or_expression : and_expression
  55                          | exclusive_or_expression '^' and_expression

  56  inclusive_or_expression : exclusive_or_expression
  57                          | inclusive_or_expression '|' exclusive_or_expression

  58  logical_and_expression : inclusive_or_expression
  59                         | logical_and_expression AND_OP inclusive_or_expression

  60  logical_or_expression : logical_and_expression
  61                        | logical_or_expression OR_OP logical_and_expression

  62  conditional_expression : logical_or_expression
  63                         | logical_or_expression '?' expression ':' conditional_expression

  64  assignment_expression : conditional_expression
  65                        | unary_expression assignment_operator assignment_expression

  66  assignment_operator : '='
  67                      | MUL_ASSIGN
  68                      | DIV_ASSIGN
  69                      | MOD_ASSIGN
  70                      | ADD_ASSIGN
  71                      | SUB_ASSIGN
  72                      | LEFT_ASSIGN
  73                      | RIGHT_ASSIGN
  74                      | AND_ASSIGN
  75                      | XOR_ASSIGN
  76                      | OR_ASSIGN

  77  expression : assignment_expression
  78             | expression ',' assignment_expression

  79  constant_expression : conditional_expression

  80  declaration : declaration_specifiers ';'
  81              | declaration_specifiers init_declarator_list ';'

  82  declaration_specifiers : storage_class_specifier
  83                         | storage_class_specifier declaration_specifiers
  84                         | type_specifier
  85                         | type_specifier declaration_specifiers
  86                         | type_qualifier
  87                         | type_qualifier declaration_specifiers
  88                         | function_specifier
  89                         | function_specifier declaration_specifiers

  90  function_specifier : INLINE
  91                     | INLINE2

  92  init_declarator_list : init_declarator
  93                       | init_declarator_list ',' init_declarator

  94  init_declarator : declarator
  95                  | declarator '=' initializer

  96  storage_class_specifier : TYPEDEF
  97                          | EXTERN
  98                          | STATIC
  99                          | AUTO
 100                          | REGISTER

 101  type_specifier : VOID
 102                 | CHAR
 103                 | SHORT
 104                 | INT
 105                 | LONG
 106                 | FLOAT
 107                 | DOUBLE
 108                 | SIGNED
 109                 | UNSIGNED
 110                 | struct_or_union_specifier
 111                 | enum_specifier
 112                 | TYPE_NAME

 113  $$6 :

 114  $$7 :

 115  struct_or_union_specifier : struct_or_union IDENTIFIER '{' $$6 struct_declaration_list $$7 '}'

 116  $$8 :

 117  $$9 :

 118  struct_or_union_specifier : struct_or_union '{' $$8 struct_declaration_list $$9 '}'
 119                            | struct_or_union IDENTIFIER

 120  struct_or_union : STRUCT
 121                  | UNION

 122  struct_declaration_list : struct_declaration
 123                          | struct_declaration_list struct_declaration

 124  struct_declaration : specifier_qualifier_list struct_declarator_list ';'

 125  specifier_qualifier_list : type_specifier specifier_qualifier_list
 126                           | type_specifier
 127                           | type_qualifier specifier_qualifier_list
 128                           | type_qualifier

 129  struct_declarator_list : struct_declarator
 130                         | struct_declarator_list ',' struct_declarator

 131  struct_declarator : declarator
 132                    | ':' constant_expression
 133                    | declarator ':' constant_expression

 134  enum_specifier : ENUM '{' enumerator_list enumerator_list_end '}'
 135                 | ENUM IDENTIFIER '{' enumerator_list enumerator_list_end '}'
 136                 | ENUM IDENTIFIER

 137  enumerator_list_end :
 138                      | ','

 139  enumerator_list : enumerator
 140                  | enumerator_list ',' enumerator

 141  enumerator : IDENTIFIER
 142             | IDENTIFIER '=' constant_expression

 143  type_qualifier : CONST
 144                 | VOLATILE

 145  declarator : pointer direct_declarator
 146             | direct_declarator

 147  pre_direct_declarator :

 148  direct_declarator : IDENTIFIER
 149                    | '(' declarator ')'
 150                    | direct_declarator '[' direct_declarator_needinsert constant_expression ']'
 151                    | direct_declarator '[' ']'

 152  $$10 :

 153  $$11 :

 154  $$12 :

 155  direct_declarator : direct_declarator $$10 '(' $$11 parameter_type_list $$12 ')'

 156  $$13 :

 157  direct_declarator : direct_declarator $$13 '(' identifier_list ')'

 158  $$14 :

 159  direct_declarator : direct_declarator $$14 '(' ')'

 160  direct_declarator_needinsert :

 161  pointer : '*'
 162          | '*' type_qualifier_list
 163          | '*' pointer
 164          | '*' type_qualifier_list pointer

 165  type_qualifier_list : type_qualifier
 166                      | type_qualifier_list type_qualifier

 167  parameter_type_list : parameter_list
 168                      | parameter_list ',' ELLIPSIS

 169  parameter_list : parameter_declaration
 170                 | parameter_list ',' parameter_declaration

 171  parameter_declaration : declaration_specifiers_declarator declarator end_declarator
 172                        | declaration_specifiers_declarator abstract_declarator end_declarator
 173                        | declaration_specifiers
 174                        |

 175  end_declarator :

 176  declaration_specifiers_declarator : declaration_specifiers after_decl_spec

 177  after_decl_spec :

 178  identifier_list : IDENTIFIER
 179                  | identifier_list ',' IDENTIFIER

 180  type_name : specifier_qualifier_list
 181            | specifier_qualifier_list abstract_declarator

 182  abstract_declarator : pointer
 183                      | direct_abstract_declarator
 184                      | pointer direct_abstract_declarator

 185  $$15 :

 186  direct_abstract_declarator : '(' abstract_declarator $$15 ')'
 187                             | '[' ']'
 188                             | '[' constant_expression ']'

 189  $$16 :

 190  direct_abstract_declarator : direct_abstract_declarator $$16 '[' ']'

 191  $$17 :

 192  direct_abstract_declarator : direct_abstract_declarator $$17 '[' constant_expression ']'
 193                             | '(' ')'

 194  $$18 :

 195  $$19 :

 196  direct_abstract_declarator : '(' $$18 parameter_type_list $$19 ')'
 197                             | direct_abstract_declarator '(' ')'

 198  $$20 :

 199  $$21 :

 200  direct_abstract_declarator : direct_abstract_declarator '(' $$20 parameter_type_list $$21 ')'

 201  initializer : assignment_expression
 202              | '{' initializer_list '}'
 203              | '{' initializer_list ',' '}'

 204  initializer_list : initializer
 205                   | initializer_list ',' initializer

 206  statement : labeled_statement
 207            | compound_statement
 208            | expression_statement
 209            | selection_statement
 210            | iteration_statement
 211            | jump_statement

 212  labeled_statement : IDENTIFIER ':' statement
 213                    | CASE constant_expression ':' statement
 214                    | DEFAULT ':' statement

 215  compound_statement : '{' '}'
 216                     | '{' statement_list '}'
 217                     | '{' declaration_list '}'
 218                     | '{' declaration_list statement_list '}'

 219  declaration_list : declaration
 220                   | declaration_list declaration

 221  statement_list : statement
 222                 | statement_list statement

 223  expression_statement : ';'
 224                       | expression ';'

 225  $$22 :

 226  $$23 :

 227  $$24 :

 228  selection_statement_first_half : IF '(' $$22 expression $$23 ')' $$24 statement

 229  selection_statement : selection_statement_first_half
 230                      | selection_statement_first_half ELSE statement
 231                      | SWITCH '(' expression ')' statement

 232  iteration_statement : WHILE '(' expression ')' statement
 233                      | DO statement WHILE '(' expression ')' ';'
 234                      | FOR '(' expression_statement expression_statement ')' statement
 235                      | FOR '(' expression_statement expression_statement expression ')' statement

 236  jump_statement : GOTO IDENTIFIER ';'
 237                 | CONTINUE ';'
 238                 | BREAK ';'
 239                 | RETURN ';'
 240                 | RETURN expression ';'

 241  translation_unit : external_declaration
 242                   | translation_unit external_declaration

 243  external_declaration : function_definition
 244                       | declaration

 245  $$25 :

 246  function_definition : declaration_specifiers declarator $$25 declaration_list compound_statement

 247  $$26 :

 248  function_definition : declaration_specifiers declarator $$26 compound_statement

 249  $$27 :

 250  function_definition : declarator $$27 declaration_list compound_statement
 251                      | declarator compound_statement

state 0
	$accept : . translation_unit $end  (0)

	IDENTIFIER  shift 1
	TYPE_NAME  shift 2
	TYPEDEF  shift 3
	EXTERN  shift 4
	STATIC  shift 5
	AUTO  shift 6
	REGISTER  shift 7
	CHAR  shift 8
	SHORT  shift 9
	INT  shift 10
	LONG  shift 11
	SIGNED  shift 12
	UNSIGNED  shift 13
	FLOAT  shift 14
	DOUBLE  shift 15
	CONST  shift 16
	VOLATILE  shift 17
	VOID  shift 18
	STRUCT  shift 19
	UNION  shift 20
	ENUM  shift 21
	INLINE  shift 22
	INLINE2  shift 23
	'('  shift 24
	'*'  shift 25
	.  error

	translation_unit  goto 26
	declaration  goto 27
	declaration_specifiers  goto 28
	storage_class_specifier  goto 29
	type_specifier  goto 30
	type_qualifier  goto 31
	function_specifier  goto 32
	declarator  goto 33
	struct_or_union_specifier  goto 34
	enum_specifier  goto 35
	struct_or_union  goto 36
	pointer  goto 37
	direct_declarator  goto 38
	external_declaration  goto 39
	function_definition  goto 40


state 1
	direct_declarator : IDENTIFIER .  (148)

	.  reduce 148


state 2
	type_specifier : TYPE_NAME .  (112)

	.  reduce 112


state 3
	storage_class_specifier : TYPEDEF .  (96)

	.  reduce 96


state 4
	storage_class_specifier : EXTERN .  (97)

	.  reduce 97


state 5
	storage_class_specifier : STATIC .  (98)

	.  reduce 98


state 6
	storage_class_specifier : AUTO .  (99)

	.  reduce 99


state 7
	storage_class_specifier : REGISTER .  (100)

	.  reduce 100


state 8
	type_specifier : CHAR .  (102)

	.  reduce 102


state 9
	type_specifier : SHORT .  (103)

	.  reduce 103


state 10
	type_specifier : INT .  (104)

	.  reduce 104


state 11
	type_specifier : LONG .  (105)

	.  reduce 105


state 12
	type_specifier : SIGNED .  (108)

	.  reduce 108


state 13
	type_specifier : UNSIGNED .  (109)

	.  reduce 109


state 14
	type_specifier : FLOAT .  (106)

	.  reduce 106


state 15
	type_specifier : DOUBLE .  (107)

	.  reduce 107


state 16
	type_qualifier : CONST .  (143)

	.  reduce 143


state 17
	type_qualifier : VOLATILE .  (144)

	.  reduce 144


state 18
	type_specifier : VOID .  (101)

	.  reduce 101


state 19
	struct_or_union : STRUCT .  (120)

	.  reduce 120


state 20
	struct_or_union : UNION .  (121)

	.  reduce 121


state 21
	enum_specifier : ENUM . '{' enumerator_list enumerator_list_end '}'  (134)
	enum_specifier : ENUM . IDENTIFIER '{' enumerator_list enumerator_list_end '}'  (135)
	enum_specifier : ENUM . IDENTIFIER  (136)

	IDENTIFIER  shift 41
	'{'  shift 42
	.  error


state 22
	function_specifier : INLINE .  (90)

	.  reduce 90


state 23
	function_specifier : INLINE2 .  (91)

	.  reduce 91


state 24
	direct_declarator : '(' . declarator ')'  (149)

	IDENTIFIER  shift 1
	'('  shift 24
	'*'  shift 25
	.  error

	declarator  goto 43
	pointer  goto 37
	direct_declarator  goto 38


state 25
	pointer : '*' .  (161)
	pointer : '*' . type_qualifier_list  (162)
	pointer : '*' . pointer  (163)
	pointer : '*' . type_qualifier_list pointer  (164)

	CONST  shift 16
	VOLATILE  shift 17
	'*'  shift 25
	IDENTIFIER  reduce 161
	'('  reduce 161
	')'  reduce 161
	'['  reduce 161
	','  reduce 161

	type_qualifier  goto 44
	pointer  goto 45
	type_qualifier_list  goto 46


state 26
	$accept : translation_unit . $end  (0)
	translation_unit : translation_unit . external_declaration  (242)

	$end  accept
	IDENTIFIER  shift 1
	TYPE_NAME  shift 2
	TYPEDEF  shift 3
	EXTERN  shift 4
	STATIC  shift 5
	AUTO  shift 6
	REGISTER  shift 7
	CHAR  shift 8
	SHORT  shift 9
	INT  shift 10
	LONG  shift 11
	SIGNED  shift 12
	UNSIGNED  shift 13
	FLOAT  shift 14
	DOUBLE  shift 15
	CONST  shift 16
	VOLATILE  shift 17
	VOID  shift 18
	STRUCT  shift 19
	UNION  shift 20
	ENUM  shift 21
	INLINE  shift 22
	INLINE2  shift 23
	'('  shift 24
	'*'  shift 25
	.  error

	declaration  goto 27
	declaration_specifiers  goto 28
	storage_class_specifier  goto 29
	type_specifier  goto 30
	type_qualifier  goto 31
	function_specifier  goto 32
	declarator  goto 33
	struct_or_union_specifier  goto 34
	enum_specifier  goto 35
	struct_or_union  goto 36
	pointer  goto 37
	direct_declarator  goto 38
	external_declaration  goto 47
	function_definition  goto 40


state 27
	external_declaration : declaration .  (244)

	.  reduce 244


state 28
	declaration : declaration_specifiers . ';'  (80)
	declaration : declaration_specifiers . init_declarator_list ';'  (81)
	function_definition : declaration_specifiers . declarator $$25 declaration_list compound_statement  (246)
	function_definition : declaration_specifiers . declarator $$26 compound_statement  (248)

	IDENTIFIER  shift 1
	'('  shift 24
	'*'  shift 25
	';'  shift 48
	.  error

	init_declarator_list  goto 49
	init_declarator  goto 50
	declarator  goto 51
	pointer  goto 37
	direct_declarator  goto 38


state 29
	declaration_specifiers : storage_class_specifier .  (82)
	declaration_specifiers : storage_class_specifier . declaration_specifiers  (83)

	TYPE_NAME  shift 2
	TYPEDEF  shift 3
	EXTERN  shift 4
	STATIC  shift 5
	AUTO  shift 6
	REGISTER  shift 7
	CHAR  shift 8
	SHORT  shift 9
	INT  shift 10
	LONG  shift 11
	SIGNED  shift 12
	UNSIGNED  shift 13
	FLOAT  shift 14
	DOUBLE  shift 15
	CONST  shift 16
	VOLATILE  shift 17
	VOID  shift 18
	STRUCT  shift 19
	UNION  shift 20
	ENUM  shift 21
	INLINE  shift 22
	INLINE2  shift 23
	IDENTIFIER  reduce 82
	'('  reduce 82
	')'  reduce 82
	'['  reduce 82
	','  reduce 82
	'*'  reduce 82
	';'  reduce 82

	declaration_specifiers  goto 52
	storage_class_specifier  goto 29
	type_specifier  goto 30
	type_qualifier  goto 31
	function_specifier  goto 32
	struct_or_union_specifier  goto 34
	enum_specifier  goto 35
	struct_or_union  goto 36


state 30
	declaration_specifiers : type_specifier .  (84)
	declaration_specifiers : type_specifier . declaration_specifiers  (85)

	TYPE_NAME  shift 2
	TYPEDEF  shift 3
	EXTERN  shift 4
	STATIC  shift 5
	AUTO  shift 6
	REGISTER  shift 7
	CHAR  shift 8
	SHORT  shift 9
	INT  shift 10
	LONG  shift 11
	SIGNED  shift 12
	UNSIGNED  shift 13
	FLOAT  shift 14
	DOUBLE  shift 15
	CONST  shift 16
	VOLATILE  shift 17
	VOID  shift 18
	STRUCT  shift 19
	UNION  shift 20
	ENUM  shift 21
	INLINE  shift 22
	INLINE2  shift 23
	IDENTIFIER  reduce 84
	'('  reduce 84
	')'  reduce 84
	'['  reduce 84
	','  reduce 84
	'*'  reduce 84
	';'  reduce 84

	declaration_specifiers  goto 53
	storage_class_specifier  goto 29
	type_specifier  goto 30
	type_qualifier  goto 31
	function_specifier  goto 32
	struct_or_union_specifier  goto 34
	enum_specifier  goto 35
	struct_or_union  goto 36


state 31
	declaration_specifiers : type_qualifier .  (86)
	declaration_specifiers : type_qualifier . declaration_specifiers  (87)

	TYPE_NAME  shift 2
	TYPEDEF  shift 3
	EXTERN  shift 4
	STATIC  shift 5
	AUTO  shift 6
	REGISTER  shift 7
	CHAR  shift 8
	SHORT  shift 9
	INT  shift 10
	LONG  shift 11
	SIGNED  shift 12
	UNSIGNED  shift 13
	FLOAT  shift 14
	DOUBLE  shift 15
	CONST  shift 16
	VOLATILE  shift 17
	VOID  shift 18
	STRUCT  shift 19
	UNION  shift 20
	ENUM  shift 21
	INLINE  shift 22
	INLINE2  shift 23
	IDENTIFIER  reduce 86
	'('  reduce 86
	')'  reduce 86
	'['  reduce 86
	','  reduce 86
	'*'  reduce 86
	';'  reduce 86

	declaration_specifiers  goto 54
	storage_class_specifier  goto 29
	type_specifier  goto 30
	type_qualifier  goto 31
	function_specifier  goto 32
	struct_or_union_specifier  goto 34
	enum_specifier  goto 35
	struct_or_union  goto 36


state 32
	declaration_specifiers : function_specifier .  (88)
	declaration_specifiers : function_specifier . declaration_specifiers  (89)

	TYPE_NAME  shift 2
	TYPEDEF  shift 3
	EXTERN  shift 4
	STATIC  shift 5
	AUTO  shift 6
	REGISTER  shift 7
	CHAR  shift 8
	SHORT  shift 9
	INT  shift 10
	LONG  shift 11
	SIGNED  shift 12
	UNSIGNED  shift 13
	FLOAT  shift 14
	DOUBLE  shift 15
	CONST  shift 16
	VOLATILE  shift 17
	VOID  shift 18
	STRUCT  shift 19
	UNION  shift 20
	ENUM  shift 21
	INLINE  shift 22
	INLINE2  shift 23
	IDENTIFIER  reduce 88
	'('  reduce 88
	')'  reduce 88
	'['  reduce 88
	','  reduce 88
	'*'  reduce 88
	';'  reduce 88

	declaration_specifiers  goto 55
	storage_class_specifier  goto 29
	type_specifier  goto 30
	type_qualifier  goto 31
	function_specifier  goto 32
	struct_or_union_specifier  goto 34
	enum_specifier  goto 35
	struct_or_union  goto 36


state 33
	function_definition : declarator . $$27 declaration_list compound_statement  (250)
	function_definition : declarator . compound_statement  (251)
	$$27 : .  (249)

	'{'  shift 56
	TYPE_NAME  reduce 249
	TYPEDEF  reduce 249
	EXTERN  reduce 249
	STATIC  reduce 249
	AUTO  reduce 249
	REGISTER  reduce 249
	CHAR  reduce 249
	SHORT  reduce 249
	INT  reduce 249
	LONG  reduce 249
	SIGNED  reduce 249
	UNSIGNED  reduce 249
	FLOAT  reduce 249
	DOUBLE  reduce 249
	CONST  reduce 249
	VOLATILE  reduce 249
	VOID  reduce 249
	STRUCT  reduce 249
	UNION  reduce 249
	ENUM  reduce 249
	INLINE  reduce 249
	INLINE2  reduce 249

	compound_statement  goto 57
	$$27  goto 58


state 34
	type_specifier : struct_or_union_specifier .  (110)

	.  reduce 110


state 35
	type_specifier : enum_specifier .  (111)

	.  reduce 111


state 36
	struct_or_union_specifier : struct_or_union . IDENTIFIER '{' $$6 struct_declaration_list $$7 '}'  (115)
	struct_or_union_specifier : struct_or_union . '{' $$8 struct_declaration_list $$9 '}'  (118)
	struct_or_union_specifier : struct_or_union . IDENTIFIER  (119)

	IDENTIFIER  shift 59
	'{'  shift 60
	.  error


state 37
	declarator : pointer . direct_declarator  (145)

	IDENTIFIER  shift 1
	'('  shift 24
	.  error

	direct_declarator  goto 61


38: reduce/reduce conflict (reduce 152, reduce 156) on '('
38: reduce/reduce conflict (reduce 152, reduce 158) on '('
state 38
	declarator : direct_declarator .  (146)
	direct_declarator : direct_declarator . '[' direct_declarator_needinsert constant_expression ']'  (150)
	direct_declarator : direct_declarator . '[' ']'  (151)
	direct_declarator : direct_declarator . $$10 '(' $$11 parameter_type_list $$12 ')'  (155)
	direct_declarator : direct_declarator . $$13 '(' identifier_list ')'  (157)
	direct_declarator : direct_declarator . $$14 '(' ')'  (159)
	$$10 : .  (152)
	$$13 : .  (156)
	$$14 : .  (158)

	'['  shift 62
	TYPE_NAME  reduce 146
	TYPEDEF  reduce 146
	EXTERN  reduce 146
	STATIC  reduce 146
	AUTO  reduce 146
	REGISTER  reduce 146
	CHAR  reduce 146
	SHORT  reduce 146
	INT  reduce 146
	LONG  reduce 146
	SIGNED  reduce 146
	UNSIGNED  reduce 146
	FLOAT  reduce 146
	DOUBLE  reduce 146
	CONST  reduce 146
	VOLATILE  reduce 146
	VOID  reduce 146
	STRUCT  reduce 146
	UNION  reduce 146
	ENUM  reduce 146
	INLINE  reduce 146
	INLINE2  reduce 146
	'{'  reduce 146
	'('  reduce 152
	')'  reduce 146
	','  reduce 146
	':'  reduce 146
	'='  reduce 146
	';'  reduce 146

	$$10  goto 63
	$$13  goto 64
	$$14  goto 65


state 39
	translation_unit : external_declaration .  (241)

	.  reduce 241


state 40
	external_declaration : function_definition .  (243)

	.  reduce 243


state 41
	enum_specifier : ENUM IDENTIFIER . '{' enumerator_list enumerator_list_end '}'  (135)
	enum_specifier : ENUM IDENTIFIER .  (136)

	'{'  shift 66
	IDENTIFIER  reduce 136
	TYPE_NAME  reduce 136
	TYPEDEF  reduce 136
	EXTERN  reduce 136
	STATIC  reduce 136
	AUTO  reduce 136
	REGISTER  reduce 136
	CHAR  reduce 136
	SHORT  reduce 136
	INT  reduce 136
	LONG  reduce 136
	SIGNED  reduce 136
	UNSIGNED  reduce 136
	FLOAT  reduce 136
	DOUBLE  reduce 136
	CONST  reduce 136
	VOLATILE  reduce 136
	VOID  reduce 136
	STRUCT  reduce 136
	UNION  reduce 136
	ENUM  reduce 136
	INLINE  reduce 136
	INLINE2  reduce 136
	'('  reduce 136
	')'  reduce 136
	'['  reduce 136
	','  reduce 136
	'*'  reduce 136
	':'  reduce 136
	';'  reduce 136


state 42
	enum_specifier : ENUM '{' . enumerator_list enumerator_list_end '}'  (134)

	IDENTIFIER  shift 67
	.  error

	enumerator_list  goto 68
	enumerator  goto 69


state 43
	direct_declarator : '(' declarator . ')'  (149)

	')'  shift 70
	.  error


state 44
	type_qualifier_list : type_qualifier .  (165)

	.  reduce 165


state 45
	pointer : '*' pointer .  (163)

	.  reduce 163


state 46
	pointer : '*' type_qualifier_list .  (162)
	pointer : '*' type_qualifier_list . pointer  (164)
	type_qualifier_list : type_qualifier_list . type_qualifier  (166)

	CONST  shift 16
	VOLATILE  shift 17
	'*'  shift 25
	IDENTIFIER  reduce 162
	'('  reduce 162
	')'  reduce 162
	'['  reduce 162
	','  reduce 162

	type_qualifier  goto 71
	pointer  goto 72


state 47
	translation_unit : translation_unit external_declaration .  (242)

	.  reduce 242


state 48
	declaration : declaration_specifiers ';' .  (80)

	.  reduce 80


state 49
	declaration : declaration_specifiers init_declarator_list . ';'  (81)
	init_declarator_list : init_declarator_list . ',' init_declarator  (93)

	','  shift 73
	';'  shift 74
	.  error


state 50
	init_declarator_list : init_declarator .  (92)

	.  reduce 92


state 51
	init_declarator : declarator .  (94)
	init_declarator : declarator . '=' initializer  (95)
	function_definition : declaration_specifiers declarator . $$25 declaration_list compound_statement  (246)
	function_definition : declaration_specifiers declarator . $$26 compound_statement  (248)
	$$25 : .  (245)
	$$26 : .  (247)

	'='  shift 75
	TYPE_NAME  reduce 245
	TYPEDEF  reduce 245
	EXTERN  reduce 245
	STATIC  reduce 245
	AUTO  reduce 245
	REGISTER  reduce 245
	CHAR  reduce 245
	SHORT  reduce 245
	INT  reduce 245
	LONG  reduce 245
	SIGNED  reduce 245
	UNSIGNED  reduce 245
	FLOAT  reduce 245
	DOUBLE  reduce 245
	CONST  reduce 245
	VOLATILE  reduce 245
	VOID  reduce 245
	STRUCT  reduce 245
	UNION  reduce 245
	ENUM  reduce 245
	INLINE  reduce 245
	INLINE2  reduce 245
	'{'  reduce 247
	','  reduce 94
	';'  reduce 94

	$$25  goto 76
	$$26  goto 77


state 52
	declaration_specifiers : storage_class_specifier declaration_specifiers .  (83)

	.  reduce 83


state 53
	declaration_specifiers : type_specifier declaration_specifiers .  (85)

	.  reduce 85


state 54
	declaration_specifiers : type_qualifier declaration_specifiers .  (87)

	.  reduce 87


state 55
	declaration_specifiers : function_specifier declaration_specifiers .  (89)

	.  reduce 89


state 56
	compound_statement : '{' . '}'  (215)
	compound_statement : '{' . statement_list '}'  (216)
	compound_statement : '{' . declaration_list '}'  (217)
	compound_statement : '{' . declaration_list statement_list '}'  (218)

	IDENTIFIER  shift 78
	CONSTANT  shift 79
	STRING_LITERAL  shift 80
	SIZEOF  shift 81
	INC_OP  shift 82
	DEC_OP  shift 83
	TYPE_NAME  shift 2
	TYPEDEF  shift 3
	EXTERN  shift 4
	STATIC  shift 5
	AUTO  shift 6
	REGISTER  shift 7
	CHAR  shift 8
	SHORT  shift 9
	INT  shift 10
	LONG  shift 11
	SIGNED  shift 12
	UNSIGNED  shift 13
	FLOAT  shift 14
	DOUBLE  shift 15
	CONST  shift 16
	VOLATILE  shift 17
	VOID  shift 18
	STRUCT  shift 19
	UNION  shift 20
	ENUM  shift 21
	CASE  shift 84
	DEFAULT  shift 85
	IF  shift 86
	SWITCH  shift 87
	WHILE  shift 88
	DO  shift 89
	FOR  shift 90
	GOTO  shift 91
	CONTINUE  shift 92
	BREAK  shift 93
	RETURN  shift 94
	INLINE  shift 22
	INLINE2  shift 23
	'{'  shift 56
	'('  shift 95
	'&'  shift 96
	'*'  shift 97
	'+'  shift 98
	'-'  shift 99
	'~'  shift 100
	'!'  shift 101
	';'  shift 102
	'}'  shift 103
	.  error

	primary_expression  goto 104
	expression  goto 105
	postfix_expression  goto 106
	assignment_expression  goto 107
	unary_expression  goto 108
	unary_operator  goto 109
	cast_expression  goto 110
	multiplicative_expression  goto 111
	additive_expression  goto 112
	shift_expression  goto 113
	relational_expression  goto 114
	equality_expression  goto 115
	and_expression  goto 116
	exclusive_or_expression  goto 117
	inclusive_or_expression  goto 118
	logical_and_expression  goto 119
	logical_or_expression  goto 120
	conditional_expression  goto 121
	declaration  goto 122
	declaration_specifiers  goto 123
	storage_class_specifier  goto 29
	type_specifier  goto 30
	type_qualifier  goto 31
	function_specifier  goto 32
	struct_or_union_specifier  goto 34
	enum_specifier  goto 35
	struct_or_union  goto 36
	statement  goto 124
	labeled_statement  goto 125
	compound_statement  goto 126
	expression_statement  goto 127
	selection_statement  goto 128
	iteration_statement  goto 129
	jump_statement  goto 130
	statement_list  goto 131
	declaration_list  goto 132
	selection_statement_first_half  goto 133


state 57
	function_definition : declarator compound_statement .  (251)

	.  reduce 251


state 58
	function_definition : declarator $$27 . declaration_list compound_statement  (250)

	TYPE_NAME  shift 2
	TYPEDEF  shift 3
	EXTERN  shift 4
	STATIC  shift 5
	AUTO  shift 6
	REGISTER  shift 7
	CHAR  shift 8
	SHORT  shift 9
	INT  shift 10
	LONG  shift 11
	SIGNED  shift 12
	UNSIGNED  shift 13
	FLOAT  shift 14
	DOUBLE  shift 15
	CONST  shift 16
	VOLATILE  shift 17
	VOID  shift 18
	STRUCT  shift 19
	UNION  shift 20
	ENUM  shift 21
	INLINE  shift 22
	INLINE2  shift 23
	.  error

	declaration  goto 122
	declaration_specifiers  goto 123
	storage_class_specifier  goto 29
	type_specifier  goto 30
	type_qualifier  goto 31
	function_specifier  goto 32
	struct_or_union_specifier  goto 34
	enum_specifier  goto 35
	struct_or_union  goto 36
	declaration_list  goto 134


state 59
	struct_or_union_specifier : struct_or_union IDENTIFIER . '{' $$6 struct_declaration_list $$7 '}'  (115)
	struct_or_union_specifier : struct_or_union IDENTIFIER .  (119)
